// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check autosize prop 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,29 +1,29 @@
  <DocumentFragment>
    <div
      class="container touchActionPanY w100 h100"
-     style="height: 40px;"
+     style="height: 60px;"
    >
      <div
        class="actor h100"
-       style="width: 50%; transform: translate3d(-200%, 0%, 0);"
+       style="width: 50%; transform: translate3d(200%, 0%, 0);"
      >
        <div
          class="childWrapper w100 displayNone"
        />
      </div>
      <div
        class="actor h100"
-       style="width: 50%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 50%; transform: translate3d(300%, 0%, 0);"
      >
        <div
          class="childWrapper w100 displayNone"
        />
      </div>
      <div
        class="actor h100"
-       style="width: 50%; transform: translate3d(0%, 0%, 0);"
+       style="width: 50%; transform: translate3d(-200%, 0%, 0);"
      >
        <div
          class="childWrapper w100"
        >
          <div
@@ -33,11 +33,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 50%; transform: translate3d(100%, 0%, 0);"
+       style="width: 50%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
          class="childWrapper w100"
        >
          <div
@@ -47,11 +47,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 50%; transform: translate3d(200%, 0%, 0);"
+       style="width: 50%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100"
        >
          <div
@@ -61,11 +61,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 50%; transform: translate3d(300%, 0%, 0);"
+       style="width: 50%; transform: translate3d(100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 displayNone"
        />
      </div>
`;

exports[`check carousel with only one slide 1`] = `
<DocumentFragment>
  <div
    class="container touchActionPanY w100 h100"
  >
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(-100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(0%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide1"
        >
          slide1
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`check carousel without slides 1`] = `
<DocumentFragment>
  <div
    class="container touchActionPanY w100 h100"
  >
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(-100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(0%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`check defaultCursor prop 1`] = `
<DocumentFragment>
  <div
    class="container touchActionPanY w100 h100"
  >
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(-100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide2"
        >
          slide2
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(0%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide3"
        >
          slide3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`check displayAtOnce prop resizing window width to 200px should display 1 slide(s) at once 1`] = `
<DocumentFragment>
  <div
    class="container touchActionPanY w100 h100"
  >
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(-100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(0%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide1"
        >
          slide1
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 100%; transform: translate3d(100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide2"
        >
          slide2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`check displayAtOnce prop resizing window width to 500px should display 2 slide(s) at once 1`] = `
<DocumentFragment>
  <div
    class="container touchActionPanY w100 h100"
  >
    <div
      class="actor h100"
      style="width: 50%; transform: translate3d(-200%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 50%; transform: translate3d(-100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 50%; transform: translate3d(0%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide1"
        >
          slide1
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 50%; transform: translate3d(100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide2"
        >
          slide2
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 50%; transform: translate3d(200%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide3"
        >
          slide3
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 50%; transform: translate3d(300%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`check displayAtOnce prop resizing window width to 1000px should display 3 slide(s) at once 1`] = `
<DocumentFragment>
  <div
    class="container touchActionPanY w100 h100"
  >
    <div
      class="actor h100"
      style="width: 33.33333333333333%; transform: translate3d(-300%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 33.33333333333333%; transform: translate3d(-200%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 33.33333333333333%; transform: translate3d(-100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 33.33333333333333%; transform: translate3d(0%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide1"
        >
          slide1
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 33.33333333333333%; transform: translate3d(100%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide2"
        >
          slide2
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 33.33333333333333%; transform: translate3d(200%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100"
      >
        <div
          data-testid="slide3"
        >
          slide3
        </div>
      </div>
    </div>
    <div
      class="actor h100"
      style="width: 33.33333333333333%; transform: translate3d(300%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 33.33333333333333%; transform: translate3d(400%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
    <div
      class="actor h100"
      style="width: 33.33333333333333%; transform: translate3d(500%, 0%, 0);"
    >
      <div
        class="childWrapper w100 h100 displayNone"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`check infinite switching move from cursor 100 to cursor 101 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    <div
      class="container touchActionPanY w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -16,11 +16,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -30,11 +30,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;

exports[`check infinite switching move from cursor 101 to cursor 102 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    <div
      class="container touchActionPanY w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -16,11 +16,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -30,11 +30,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;

exports[`check slides switching using cursor prop move from cursor 0 to cursor 1 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,19 +2,25 @@
    <div
      class="container touchActionPanY w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
-         class="childWrapper w100 h100 displayNone"
-       />
+         class="childWrapper w100 h100"
+       >
+         <div
+           data-testid="slide3"
+         >
+           slide3
+         </div>
+       </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -24,11 +30,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;

exports[`check slides switching using cursor prop move from cursor 1 to cursor 0 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,25 +2,19 @@
    <div
      class="container touchActionPanY w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
-         class="childWrapper w100 h100"
-       >
-         <div
-           data-testid="slide3"
-         >
-           slide3
-         </div>
-       </div>
+         class="childWrapper w100 h100 displayNone"
+       />
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -30,11 +24,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;

exports[`check slides switching using cursor prop move from cursor 1 to cursor 2 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    <div
      class="container touchActionPanY w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -16,25 +16,19 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
-         class="childWrapper w100 h100"
-       >
-         <div
-           data-testid="slide1"
-         >
-           slide1
+         class="childWrapper w100 h100 displayNone"
+       />
      </div>
-       </div>
-     </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;

exports[`check slides switching using cursor prop move from cursor 2 to cursor 1 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,19 +2,25 @@
    <div
      class="container touchActionPanY w100 h100"
    >
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
      >
        <div
-         class="childWrapper w100 h100 displayNone"
-       />
+         class="childWrapper w100 h100"
+       >
+         <div
+           data-testid="slide1"
+         >
+           slide1
+         </div>
+       </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(-100%, 0%, 0);"
+       style="width: 100%; transform: translate3d(0%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
@@ -24,11 +30,11 @@
          </div>
        </div>
      </div>
      <div
        class="actor h100"
-       style="width: 100%; transform: translate3d(0%, 0%, 0);"
+       style="width: 100%; transform: translate3d(100%, 0%, 0);"
      >
        <div
          class="childWrapper w100 h100"
        >
          <div
`;
